ProductPOOL/java/i5/cb/api/notification/NotificationParser.java
/*
The ConceptBase.cc Copyright

Copyright 1987-2022 The ConceptBase Team. All rights reserved.

Redistribution and use in source and binary forms, with or without modification, are permitted
provided that the following conditions are met:

   1. Redistributions of source code must retain the above copyright notice, this list of
      conditions and the following disclaimer.
   2. Redistributions in binary form must reproduce the above copyright notice, this list of
      conditions and the following disclaimer in the documentation and/or other materials
      provided with the distribution.

THIS SOFTWARE IS PROVIDED BY THE CONCEPTBASE TEAM ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES,
INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A
PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE CONCEPTBASE TEAM OR CONTRIBUTORS BE
LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
(INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA,
OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT
OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

The views and conclusions contained in the software and documentation are those of the authors
and should not be interpreted as representing official policies, either expressed or implied,
of the ConceptBase Team.


The ConceptBase Team is represented by

Manfred Jeusfeld, University of Skovde, 54128 Skovde, Sweden
Matthias Jarke, RWTH Aachen, Informatik 5, Ahornstr. 55, 52056 Aachen, Germany
Christoph Quix, RWTH Aachen, Informatik 5, Ahornstr. 55, 52056 Aachen, Germany


This license is a FreeBSD-style copyright license.
Legal home of the FreeBSD copyright license: http://www.freebsd.org/copyright/freebsd-license.html
*/
/* Generated By:JavaCC: Do not edit this line. NotificationParser.java */
package i5.cb.api.notification;

import i5.cb.telos.frame.*;

import com.objectspace.jgl.SList;
import com.objectspace.jgl.Sequence;


/**
 * parses notification sent from a ConceptBase server
 * <li> First, construct a NotificationParser object: <br>
 *      <tt> NotificationParser parser = new NotificationParser( System.in ); </tt>
 * <li> Second, call the function that parses up to the nonterminal symbol
 *      you are expecting, generally Notification.
 *      <tt> Notification notification = parser.notification(); </tt>
 * <li> If you want to go on parsing, just repeat calling the function
 *      corresponding to the appropiate nonterminal. For a list of all
 *      nonterminals, see <a href="file:/home/radig/prcs-work/crda/java/i5/cb/api/notification/Notification.html">the grammar of notifications</a>
 * </ul>
 *
 * @author Christoph Radig
 */

public class NotificationParser implements NotificationParserConstants {

///////////////////////////////////////////////////////////////////////////////
// Parser
///////////////////////////////////////////////////////////////////////////////

/**
 * parses a notification message (as part of an ConceptBase ipcanswer message)
 **/
  final public Notification notification() throws ParseException {
  Notification r;
    jj_consume_token(13);
    r = updateTerms();
    jj_consume_token(14);
                             {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

/**
 * parses a term that the server sends in response to an ASK with the
 * answer format VIEW
 **/
  final public Sequence askVIEWTerm() throws ParseException {
  Sequence r;
    jj_consume_token(13);
    r = terms();
    jj_consume_token(14);
                       {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

  final public Notification updateTerms() throws ParseException {
  Notification r = new Notification();  // empty list
  UpdateTerm t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
    case MINUS:
      t = updateTerm();
                      r.add( t );
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 10:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        jj_consume_token(10);
        t = updateTerm();
                           r.add( t );
      }
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

   // updateTerms
  final public UpdateTerm updateTerm() throws ParseException {
  Term t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
      jj_consume_token(PLUS);
      jj_consume_token(11);
      t = term();
      jj_consume_token(12);
                             {if (true) return new UpdateTerm( UpdateTerm.PLUS, t );}
      break;
    case MINUS:
      jj_consume_token(MINUS);
      jj_consume_token(11);
      t = term();
      jj_consume_token(12);
                              {if (true) return new UpdateTerm( UpdateTerm.MINUS, t );}
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

   // updateTerm
  final public Sequence terms() throws ParseException {
  Sequence r = new SList();
  Term t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ALPHANUM:
    case NUMBER:
    case SIMPLELABEL:
    case STRINGLABEL:
    case RULELABEL:
      t = term();
                r.add( t );
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 10:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_2;
        }
        jj_consume_token(10);
        t = term();
                     r.add( t );
      }
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

   // terms
  final public Term term() throws ParseException {
  Term r;
  Label lView;
    lView = label();
    jj_consume_token(11);
    if (jj_2_1(2)) {
      r = viewTermX(lView);
                            {if (true) return r;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ALPHANUM:
      case NUMBER:
      case SIMPLELABEL:
      case STRINGLABEL:
      case RULELABEL:
        r = attributeTermX(lView);
                                 {if (true) return r;}
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

   // term
  final public ViewTerm viewTerm() throws ParseException {
  Label lView;
  ViewTerm r;
    lView = label();
    jj_consume_token(11);
    r = viewTermX(lView);
                                            {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

   // viewTerm
  final public ViewTerm viewTermX(Label lView) throws ParseException {
  ObjectName o;
    o = objectName();
    jj_consume_token(12);
    ViewTerm r;

    if( o instanceof DeriveExp ) {
      DeriveExp de = (DeriveExp) o;
      ObjectName viewName = new DeriveExp( lView, de.getBindings() );
      r = new ViewTerm( viewName, de.getObjectName() );
    }
    else
      r = new ViewTerm( lView, o );

    {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

   // viewTermX
  final public AttributeTerm attributeTerm() throws ParseException {
  Label lView;
  AttributeTerm r;
    lView = label();
    jj_consume_token(11);
    r = attributeTermX(lView);
                                                 {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

   // attributeTerm
  final public AttributeTerm attributeTermX(Label lView) throws ParseException {
  Label lAttrCategory, lLabel;
  ObjectName oSource, oDest;
    lAttrCategory = label();
    jj_consume_token(10);
    oSource = objectName();
    jj_consume_token(10);
    lLabel = label();
    jj_consume_token(10);
    oDest = objectName();
    jj_consume_token(12);
    AttributeTerm r;

    if( oSource instanceof DeriveExp ) {
      DeriveExp de = (DeriveExp) oSource;
      ObjectName viewName = new DeriveExp( lView, de.getBindings() );
      r = new AttributeTerm( viewName, lAttrCategory, de.getObjectName(), lLabel, oDest );
    }
    else
      r = new AttributeTerm( lView, lAttrCategory, oSource, lLabel, oDest );

    {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

   // attributeTermX
  final public ObjectName objectName() throws ParseException {
  Label l;
  ObjectName o1, o2;
  String s;
  SList subst;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ALPHANUM:
    case NUMBER:
    case SIMPLELABEL:
    case STRINGLABEL:
    case RULELABEL:
      l = label();
      {if (true) return l;}
      break;
    case SELECT:
      jj_consume_token(SELECT);
      jj_consume_token(11);
      o1 = objectName();
      jj_consume_token(10);
      s = selector();
      jj_consume_token(10);
      o2 = objectName();
      jj_consume_token(12);
      {if (true) return new SelectExp( o1, s, o2 );}
      break;
    case DERIVE:
      jj_consume_token(DERIVE);
      jj_consume_token(11);
      o1 = objectName();
      jj_consume_token(10);
      jj_consume_token(13);
      subst = substitutions();
      jj_consume_token(14);
      jj_consume_token(12);
      {if (true) return new DeriveExp( o1, subst );}
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

   // objectName
  final public String selector() throws ParseException {
  Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SELECTOR1:
      t = jj_consume_token(SELECTOR1);
                   {if (true) return t.image;}
      break;
    case SELECTOR2:
      t = jj_consume_token(SELECTOR2);
                   {if (true) return t.image;}
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

   // selector
  final public SList substitutions() throws ParseException {
  SList r = new SList();
  Substitution s;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SUBSTITUTE:
      s = substitution();
                        r.add( s );
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 10:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_3;
        }
        jj_consume_token(10);
        s = substitution();
                             r.add( s );
      }
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

   // substitutions
  final public Substitution substitution() throws ParseException {
  ObjectName o;
  Label l;
    jj_consume_token(SUBSTITUTE);
    jj_consume_token(11);
    o = objectName();
    jj_consume_token(10);
    l = label();
    jj_consume_token(12);
    {if (true) return new Substitution( o, l );}
    throw new Error("Missing return statement in function");
  }

   // substitution
  final public Label label() throws ParseException {
  Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ALPHANUM:
      t = jj_consume_token(ALPHANUM);
                  {if (true) return new Label( t.image );}
      break;
    case NUMBER:
      t = jj_consume_token(NUMBER);
                {if (true) return new Label( t.image );}
      break;
    case SIMPLELABEL:
      t = jj_consume_token(SIMPLELABEL);
                     {if (true) return new Label( t.image );}
      break;
    case STRINGLABEL:
      t = jj_consume_token(STRINGLABEL);
                     {if (true) return new Label( t.image );}
      break;
    case RULELABEL:
      t = jj_consume_token(RULELABEL);
                   {if (true) return new Label( t.image );}
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_1();
    jj_save(0, xla);
    return retval;
  }

  final private boolean jj_3R_8() {
    if (jj_scan_token(DERIVE)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    if (jj_scan_token(11)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3_1() {
    if (jj_3R_4()) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3R_7() {
    if (jj_scan_token(SELECT)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    if (jj_scan_token(11)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3R_6() {
    if (jj_3R_9()) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3R_5() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_6()) {
    jj_scanpos = xsp;
    if (jj_3R_7()) {
    jj_scanpos = xsp;
    if (jj_3R_8()) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    } else if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    } else if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3R_14() {
    if (jj_scan_token(RULELABEL)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3R_13() {
    if (jj_scan_token(STRINGLABEL)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3R_12() {
    if (jj_scan_token(SIMPLELABEL)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3R_11() {
    if (jj_scan_token(NUMBER)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3R_10() {
    if (jj_scan_token(ALPHANUM)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3R_9() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_10()) {
    jj_scanpos = xsp;
    if (jj_3R_11()) {
    jj_scanpos = xsp;
    if (jj_3R_12()) {
    jj_scanpos = xsp;
    if (jj_3R_13()) {
    jj_scanpos = xsp;
    if (jj_3R_14()) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    } else if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    } else if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    } else if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    } else if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3R_4() {
    if (jj_3R_5()) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    if (jj_scan_token(12)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  public NotificationParserTokenManager token_source;
  ASCII_CharStream jj_input_stream;
  public Token token, jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  public boolean lookingAhead = false;
  private boolean jj_semLA;
  private int jj_gen;
  final private int[] jj_la1 = new int[11];
  final private int[] jj_la1_0 = {0x400,0x6,0x6,0x400,0x141a0000,0x141a0000,0x141a0018,0xc0,0x400,0x20,0x141a0000,};
  final private JJNotificationParserCalls[] jj_2_rtns = new JJNotificationParserCalls[1];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  public NotificationParser(java.io.InputStream stream) {
    jj_input_stream = new ASCII_CharStream(stream, 1, 1);
    token_source = new NotificationParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJNotificationParserCalls();
  }

  public void ReInit(java.io.InputStream stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJNotificationParserCalls();
  }

  public NotificationParser(NotificationParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJNotificationParserCalls();
  }

  public void ReInit(NotificationParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJNotificationParserCalls();
  }

  final private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      if (++jj_gc > 100) {
        jj_gc = 0;
        for (int i = 0; i < jj_2_rtns.length; i++) {
          JJNotificationParserCalls c = jj_2_rtns[i];
          while (c != null) {
            if (c.gen < jj_gen) c.first = null;
            c = c.next;
          }
        }
      }
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  final private boolean jj_scan_token(int kind) {
    if (jj_scanpos == jj_lastpos) {
      jj_la--;
      if (jj_scanpos.next == null) {
        jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
      } else {
        jj_lastpos = jj_scanpos = jj_scanpos.next;
      }
    } else {
      jj_scanpos = jj_scanpos.next;
    }
    if (jj_rescan) {
      int i = 0; Token tok = token;
      while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
      if (tok != null) jj_add_error_token(kind, i);
    }
    return (jj_scanpos.kind != kind);
  }

  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

  final public Token getToken(int index) {
    Token t = lookingAhead ? jj_scanpos : token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  final private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.Vector jj_expentries = new java.util.Vector();
  private int[] jj_expentry;
  private int jj_kind = -1;
  private int[] jj_lasttokens = new int[100];
  private int jj_endpos;

  private void jj_add_error_token(int kind, int pos) {
    if (pos >= 100) return;
    if (pos == jj_endpos + 1) {
      jj_lasttokens[jj_endpos++] = kind;
    } else if (jj_endpos != 0) {
      jj_expentry = new int[jj_endpos];
      for (int i = 0; i < jj_endpos; i++) {
        jj_expentry[i] = jj_lasttokens[i];
      }
      boolean exists = false;
      for (java.util.Enumeration en = jj_expentries.elements(); en.hasMoreElements();) {
        int[] oldentry = (int[])(en.nextElement());
        if (oldentry.length == jj_expentry.length) {
          exists = true;
          for (int i = 0; i < jj_expentry.length; i++) {
            if (oldentry[i] != jj_expentry[i]) {
              exists = false;
              break;
            }
          }
          if (exists) break;
        }
      }
      if (!exists) jj_expentries.addElement(jj_expentry);
      if (pos != 0) jj_lasttokens[(jj_endpos = pos) - 1] = kind;
    }
  }

  final public ParseException generateParseException() {
    jj_expentries.removeAllElements();
    boolean[] la1tokens = new boolean[29];
    for (int i = 0; i < 29; i++) {
      la1tokens[i] = false;
    }
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 11; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 29; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.addElement(jj_expentry);
      }
    }
    jj_endpos = 0;
    jj_rescan_token();
    jj_add_error_token(0, 0);
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.elementAt(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  final public void enable_tracing() {
  }

  final public void disable_tracing() {
  }

  final private void jj_rescan_token() {
    jj_rescan = true;
    for (int i = 0; i < 1; i++) {
      JJNotificationParserCalls p = jj_2_rtns[i];
      do {
        if (p.gen > jj_gen) {
          jj_la = p.arg; jj_lastpos = jj_scanpos = p.first;
          switch (i) {
            case 0: jj_3_1(); break;
          }
        }
        p = p.next;
      } while (p != null);
    }
    jj_rescan = false;
  }

  final private void jj_save(int index, int xla) {
    JJNotificationParserCalls p = jj_2_rtns[index];
    while (p.gen > jj_gen) {
      if (p.next == null) { p = p.next = new JJNotificationParserCalls(); break; }
      p = p.next;
    }
    p.gen = jj_gen + xla - jj_la; p.first = token; p.arg = xla;
  }

}

final class JJNotificationParserCalls {
  int gen;
  Token first;
  int arg;
  JJNotificationParserCalls next;
}
